--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,14 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 logging.level.org.springframework.web=DEBUG
 logging.level.com.hotelmanagement.springHotel=DEBUG
+
+# Tăng giới hạn kích thước request
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+# Cấu hình để hiển thị SQL queries (để debug)
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Tăng timeout cho các request
+spring.mvc.async.request-timeout=300000
